--- a/Analysis.tex
+++ b/Analysis.tex
@@ -7,11 +7,10 @@
 
 
 \begin{document}
-\searchableSubsection{\chapterTitle{Analysis}}{analysis}{\bigskip\bigskip}
+\searchableChapter{Analysis}{analysis}
 
-	\searchableSubsection{\sectionTitle{Supremum and Infimum}}{analysis}{\bigskip}
+	\searchableSection{Supremum and Infimum}{analysis}
 	
-	\bigskip\bigskip
 	\searchableSubsection{Definitions}{analysis}{\bigskip
 		\boxeddefinition{An upper bound on a set A is a value $x$ such that,
 			\[ \forall a \in A, \, a \leq x \]
@@ -51,7 +50,9 @@
 		}
 		\notation{The supremum of $A$ is denoted $sup \, A$ and the infimum is denoted $inf \, A$.}
 	}
-	\searchableSubsection{Deductions using the supremum and infimum}{analysis}{\bigskip
+
+	\bigskip
+	\searchableSubsection{Deductions using the supremum and infimum}{analysis}{\smallskip
 		\labeledProposition{If a bounded set $A \subset \R{}$ has the property that,
 			\[ \forall x,y \in A \logicsep \abs{x - y} < 1 \]
 			then it follows that,
@@ -103,7 +104,7 @@
 	
 	
 	\pagebreak
-	\searchableSubsection{\sectionTitle{Limits}}{analysis}{\bigskip}
+	\searchableSection{Limits}{analysis}
 	
 	\bigskip\bigskip
 	\searchableSubsection{Limits of sequences}{analysis}{\bigskip
