--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -74,6 +74,11 @@
 \DeclareRobustCommand{\inv}[1]{{#1}^{-1}}
 \DeclareRobustCommand{\logicsep}{\;.\;}
 
+\def\u{\vec{\bm{u}}}
+\def\v{\vec{\bm{v}}}
+\def\w{\vec{\bm{w}}}
+\def\0{\vec{\bm{0}}}
+
 \newcommand{\bigsetc}[2]{\left\{#1\; \middle\vert \;#2\right\}}
 \newcommand{\abs}[1]{\left\lvert#1\right\rvert}
 \newcommand{\cardinality}{\abs}
