--- a/Vector Spaces.tex
+++ b/Vector Spaces.tex
@@ -1,11 +1,6 @@
 \documentclass[MathsNotesBase.tex]{subfiles}
 
 
-\def\u{\vec{\bm{u}}}
-\def\v{\vec{\bm{v}}}
-\def\w{\vec{\bm{w}}}
-\def\0{\vec{\bm{0}}}
-
 
 \date{\vspace{-6ex}}
 
@@ -167,7 +162,7 @@
 	
 	\bigskip
 	\searchableSubsection{Polynomials as a vector space}{vector spaces, polynomials}{\bigskip 		
-
+	\label{ssection:polynomials_as_vector_spaces}
 		A very important example involves treating a polynomial as a vector. A function $p: F \mapsto F$ is called a polynomial with coefficients in $F$ if there exist $a_0,\dots,a_m \in F$ such that,
 		\[ p(z) = a_0 + a_1z + a_2z^2 + \dots + a_mz^m \]
 		for all $z \in F$.\\
