--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -52,7 +52,7 @@
 
 \setlength{\parindent}{0em}
 \newcommand\chapterTitle\Huge
-\newcommand\sectionTitle\Large
+\newcommand\sectionTitle\Huge
 \newcommand\problem[1]{\paragraph{#1}}
 \newcommand\sidecomment[1]{ \text{\scriptsize{#1}} }
 \newcommand{\divides}{\mid}
@@ -62,7 +62,7 @@
 
 
 \newcommand{\wrong}{\begingroup\color{red}\text{Wrong!}\endgroup}
-\newcommand{\TODO}[1]{\textcolor{red}{\underline{TODO:} #1}}
+\newcommand{\TODO}[1]{\textcolor{blue}{\underline{TODO:} #1}}
 
 \DeclarePairedDelimiterX\setc[2]{\{}{\}}{\,#1 \,\;\delimsize\vert\;\, #2\,}
 \DeclareRobustCommand{\N}[1]{\mathbb{N}^{#1}}
